# snap-ocr

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  snap-ocr.bat  snap-ocr.ps1
.github/: copilot-instructions.md
assets/: icon.icns
scripts/: build_mac_app.sh  sign_and_notarize.sh
src/snap_ocr/: __main__.py  app.py  config.py  hotkey.py  paths.py  region_capture.py  tray.py
